--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # 	this will require to have export MAGICK_HOME=/usr/local/Cellar/imagemagick@6/6.9.9-27/ 
 # For Linux:
 #       apt-get install mediainfo unrar imagemagick libxml2-dev libxslt-dev zlib1g-dev
+# brew install ffmpeg --with-fdk-aac
 Django==1.7.7
 Wand==0.4.4
 beautifulsoup4==4.6.0
